added an initial test for login page

--- a/CovidStatistics/app.config
+++ b/CovidStatistics/app.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="base_url" value="https://localhost:44320/"/>
+		<add key="loginpage_url" value="https://localhost:44320/Identity/Account/Login"/>
 	</appSettings>
 </configuration>
