Added Register Test

--- a/CovidStatistics/app.config
+++ b/CovidStatistics/app.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="base_url" value="https://localhost:44320/"/>
+		<add key="register_url" value="https://localhost:44320/Identity/Account/Register"/>
 	</appSettings>
 </configuration>
